--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,68 @@
 body {
-  background-color: #f2f2f2;
-  text-align: center;
+    font-family: Arial, sans-serif;
+    background-color: #333;
+    color: #ccc;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+header, footer {
+    background-color: #222;
+    color: #fff;
+    padding: 20px;
+    border-radius: 0px;
+    text-align: center;
+}
+
+header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+header h1 {
+    font-size: 36px;
+    margin: 0;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 10px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #ddd;
+}
+
+main {
+    background-color: #444;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 0px;
 }
 
 @keyframes rainbow {
-  0% { color: red; }
-  14.286% { color: orange; }
-  28.572% { color: yellow; }
-  42.858% { color: green; }
-  57.144% { color: blue; }
-  71.43% { color: indigo; }
-  85.716% { color: violet; }
-  100% { color: red; } /* Ensure the last keyframe matches the first */
+    0% { color: red; }
+    16.666% { color: orange; }
+    33.333% { color: yellow; }
+    50% { color: green; }
+    66.666% { color: blue; }
+    83.333% { color: indigo; }
+    100% { color: violet; }
 }
 
 h1 {
-  font-size: 45px;
-  animation: rainbow 20s infinite;
-}
-
-em, small {
-  color: #5c5c5c;
-}
-
-a {
-  color: #5a58ad;
-  text-decoration: none;
+    font-size: 45px;
+    animation: rainbow 10s infinite;
 }
